correct mistakes in text

--- a/Steel_temperature_prediction.ipynb
+++ b/Steel_temperature_prediction.ipynb
@@ -248,7 +248,7 @@
     "- Столбцы `Bulk_1`, `Bulk_2` и т.д. (из датасета `data_bulk_new.csv`) - это виды **сыпучих** легирующих присадок и их объём, добавленный в сплав. Аналогичные столбцы из датасета `data_bulk_time_new.csv` содержат данные о **времени** добавлении той или иной присадки. Данные между этими таблицами - согласованы.\n",
     "- В датасете `data_temp_new.csv` содержится лишь один столбец с данными о подаче газа: `Газ 1`. Столбцы `Газ 2`, `Газ 3`, ... - не существуют.\n",
     "- Столбцы `Wire_1`, `Wire_2` и т.д. (из датасета `data_wire_new.csv`) - это виды **проволочных** легирующих присадок и их объём, добавленный в сплав. Аналогичные столбцы из датасета `data_wire_time_new.csv` содержат данные о **времени** добавлении той или иной присадки. Данные между этими таблицами - согласованы.\n",
-    "- В датасете `data_arc_new.csv` cодержатся столбцы с данными о **мощности**.\n",
+    "- В датасете `data_arc_new.csv` содержатся столбцы с данными о **мощности**.\n",
     "    - `Активная мощность` - **полезная** мощность электрического тока совершающая нагрев сплава (трансформирующаяся в тепловую энергию).\n",
     "    - `Реактивная мощность` - **паразитная** энергия, которая тратится на совершения эл. током физической работы. Или проще говоря: потери."
    ]
@@ -2670,7 +2670,9 @@
     "- пропуски обработаны;\n",
     "- дубликаты отсутствуют.\n",
     "\n",
-    "*пропуски в датафреймах `bulk`, `bulk_time`, `wire` и `wire_time` будут заполнены отдельно по завершению анализа данных, дабы \"заглушки\" не могли помешать."
+    "*пропуски в датафреймах `bulk`, `bulk_time`, `wire` и `wire_time` будут заполнены отдельно по завершению анализа данных, дабы \"заглушки\" не могли помешать.\n",
+    "\n",
+    "___"
    ]
   },
   {
@@ -4667,8 +4669,8 @@
    "source": [
     "# сводная таблица партий с данными о температуре (нач. и кон.) и времени её замера\n",
     "time_first_last = temp.groupby('key')['time'].min().to_frame().join(temp.groupby('key')['time'].max().to_frame(),\n",
-    "                                                                      lsuffix='_first',\n",
-    "                                                                      rsuffix='_last')\n",
+    "                                                                    lsuffix='_first',\n",
+    "                                                                    rsuffix='_last')\n",
     "time_first_last['delta_time'] = (time_first_last['time_last'] - time_first_last['time_first']).dt.seconds\n",
     "\n",
     "\n",
@@ -8334,8 +8336,7 @@
     "9. Целевой признак - это столбец `Температура` в таблице `data_temp_new.csv`, верно?\n",
     "10. Какая метрика качества (MSE, SMAPE, R2 или др.)?\n",
     "\n",
-    "По всем вопросам получил ответ на прошедшем вебинаре. **Вопросов не осталось.**\n",
-    "___"
+    "По всем вопросам получил ответ на прошедшем вебинаре. **Вопросов не осталось.**"
    ]
   }
  ],
